--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,11 +46,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
-      - name: Build and push backend Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: .Dockerfile
+          file: Dockerfile
           push: false
           tags: predict-service:latest
 
@@ -71,10 +71,10 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Build and push backend Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: .Dockerfile
+          file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/predict-service:latest
