[Tech] Add README.md
[Tech] Fix naming

[Tech] Update README.md file

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,4 +77,4 @@ jobs:
           context: .
           file: Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/predict-service:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/prediction-service:latest
